// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ProductCard should render ProductCard with cart.status = "loading" & cart.currentItemId = 1 1`] = `
<DocumentFragment>
  <article
    aria-label="sneakers Paco, unit price 54.5 $"
    class="product"
    tabindex="0"
  >
    <header>
      <img
        alt="Paco"
        height="200"
        src="https://i.ibb.co/84RrCYH/4-400-400.webp"
        width="200"
      />
    </header>
    <section
      class="product-descriptor"
    >
      <h2>
        Paco
      </h2>
      <p>
        Ab odit numquam consectetur aut.
      </p>
    </section>
    <footer>
      54.5 $
      <button
        aria-label="Add to cart Paco"
      >
        <svg
          class="small-spinner"
          height="20"
          preserveAspectRatio="xMidYMid"
          viewBox="0 0 100 100"
          width="20"
        >
          <path
            d="M24.3 30C11.4 30 5 43.3 5 50s6.4 20 19.3 20c19.3 0 32.1-40 51.4-40 C88.6 30 95 43.3 95 50s-6.4 20-19.3 20C56.4 70 43.6 30 24.3 30z"
            fill="none"
            stroke="#fff"
            stroke-dasharray="42.76482137044271 42.76482137044271"
            stroke-linecap="round"
            stroke-width="8"
          >
            <animate
              attributeName="stroke-dashoffset"
              dur="1s"
              keyTimes="0;1"
              repeatCount="indefinite"
              values="0;256.58892822265625"
            />
          </path>
        </svg>
      </button>
    </footer>
  </article>
</DocumentFragment>
`;

exports[`Component: ProductCard should render ProductCard with cart.status = "loading" & cart.currentItemId = null 1`] = `
<DocumentFragment>
  <article
    aria-label="sneakers Paco, unit price 54.5 $"
    class="product"
    tabindex="0"
  >
    <header>
      <img
        alt="Paco"
        height="200"
        src="https://i.ibb.co/84RrCYH/4-400-400.webp"
        width="200"
      />
    </header>
    <section
      class="product-descriptor"
    >
      <h2>
        Paco
      </h2>
      <p>
        Ab odit numquam consectetur aut.
      </p>
    </section>
    <footer>
      54.5 $
      <button
        aria-label="Add to cart Paco"
      >
        Add to cart
      </button>
    </footer>
  </article>
</DocumentFragment>
`;
